fixed scrollbar thing

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ body {
   height: 400px;
   color: #6a5d5d;
   background-color: white;
+  overflow-x: hidden;
 }
 
 .table tr {
@@ -44,6 +45,7 @@ body {
 
 .table td {
   padding: 0.5rem;
+  border: none;
 }
 
 .table tr:nth-of-type(odd) {
@@ -79,13 +81,4 @@ body {
   background: #666666;
   border: 100px none #ffffff;
   border-radius: 49px;
-}
-::-webkit-scrollbar-track:hover {
-  background: #666666;
-}
-::-webkit-scrollbar-track:active {
-  background: #333333;
-}
-::-webkit-scrollbar-corner {
-  background: transparent;
 }
